--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -939,14 +939,14 @@
                                 </div>
                               </div>
                               <div
-                                class="_14676s3"
+                                class="explore-filter-daterange__date"
                                 tabindex="-1"
                                 role="application"
                                 aria-roledescription=""
                                 aria-label="Calendar (Date picker)"
                               >
                                 <div
-                                  class="_1foj6yps"
+                                  class="explore-filter-daterange__date-wrapper"
                                   style="width: 292px; height: 343px"
                                 >
                                   <div
@@ -956,7 +956,7 @@
                                       width: 822px;
                                     "
                                   >
-                                    <div class="_fdp53bg">
+                                    <div class="explore-filter-daterange__date-prev-month">
                                       <div
                                         class="_1svux14"
                                         data-visible="false"
@@ -1969,7 +1969,7 @@
                                         </table>
                                       </div>
                                     </div>
-                                    <div class="_1lds9wb">
+                                    <div class="explore-filter-daterange__date-current-month">
                                       <div
                                         class="_1svux14"
                                         data-visible="true"
@@ -3001,7 +3001,7 @@
                                         </table>
                                       </div>
                                     </div>
-                                    <div class="_kuxo8ai">
+                                    <div class="explore-filter-daterange__date-next-month">
                                       <div
                                         class="_1svux14"
                                         data-visible="false"
