fx underscore and push image card

--- a/become-a-host/amenities.html
+++ b/become-a-host/amenities.html
@@ -13186,7 +13186,7 @@
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="a8jt5op dir dir-ltr"
+                      <span class="text__highlight dir dir-ltr"
                         >Your progress: step 5 out of 10.</span
                       >
                       <div class="_9kv7q8">
