--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -406,7 +406,7 @@ Cheerful private villa with pool</textarea
                                       <!-- -->/
                                       <!-- -->50</span
                                     ><span
-                                      class="a8jt5op dir dir-ltr"
+                                      class="text__highlight dir dir-ltr"
                                       aria-atomic="true"
                                       aria-live="polite"
                                       >32 out of 50 characters used</span
@@ -442,7 +442,7 @@ Cheerful private villa with pool</textarea
                             </div>
                           </div>
                           <span
-                            class="a8jt5op dir dir-ltr"
+                            class="text__highlight dir dir-ltr"
                             aria-live="assertive"
                           ></span>
                         </div>
@@ -453,7 +453,7 @@ Cheerful private villa with pool</textarea
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="a8jt5op dir dir-ltr"
+                      <span class="text__highlight dir dir-ltr"
                         >Your progress: step 7 out of 10.</span
                       >
                       <div class="_9kv7q8">
