--- a/contact-host.html
+++ b/contact-host.html
@@ -260,7 +260,7 @@
                                                     ></path>
                                                   </g></svg
                                                 ><span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Back</span
                                                 >
                                               </div></a
@@ -1174,7 +1174,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="a8jt5op dir dir-ltr"
+                                                                            class="text__highlight dir dir-ltr"
                                                                             >I’m
                                                                             flexible</span
                                                                           ><span
@@ -1220,7 +1220,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="a8jt5op dir dir-ltr"
+                                                                            class="text__highlight dir dir-ltr"
                                                                             >Europe</span
                                                                           ><span
                                                                             aria-hidden="true"
@@ -1264,7 +1264,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="a8jt5op dir dir-ltr"
+                                                                            class="text__highlight dir dir-ltr"
                                                                             >Spain</span
                                                                           ><span
                                                                             aria-hidden="true"
@@ -1308,7 +1308,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="a8jt5op dir dir-ltr"
+                                                                            class="text__highlight dir dir-ltr"
                                                                             >United
                                                                             States</span
                                                                           ><span
@@ -1354,7 +1354,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="a8jt5op dir dir-ltr"
+                                                                            class="text__highlight dir dir-ltr"
                                                                             >France</span
                                                                           ><span
                                                                             aria-hidden="true"
@@ -1398,7 +1398,7 @@
                                                                             class="ioa2q3t dir dir-ltr"
                                                                           ></div>
                                                                           <span
-                                                                            class="a8jt5op dir dir-ltr"
+                                                                            class="text__highlight dir dir-ltr"
                                                                             >Italy</span
                                                                           ><span
                                                                             aria-hidden="true"
@@ -1722,7 +1722,7 @@
                                                         ></path>
                                                       </g></svg
                                                     ><span
-                                                      class="a8jt5op dir dir-ltr"
+                                                      class="text__highlight dir dir-ltr"
                                                       >Back</span
                                                     >
                                                   </div></a
@@ -2199,7 +2199,7 @@
                                                                     >
                                                                   </div>
                                                                   <span
-                                                                    class="a8jt5op dir dir-ltr"
+                                                                    class="text__highlight dir dir-ltr"
                                                                     >₱49,950 per
                                                                     night</span
                                                                   ></span
@@ -2237,7 +2237,7 @@
                                                                       reviews</span
                                                                     ></span
                                                                   ><span
-                                                                    class="a8jt5op dir dir-ltr"
+                                                                    class="text__highlight dir dir-ltr"
                                                                     >Rated 4.97
                                                                     out of 5
                                                                     from 134
