--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -935,7 +935,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                             <span aria-hidden="true"
                                               >62/850</span
                                             ><span
-                                              class="a8jt5op dir dir-ltr"
+                                              class="text__highlight dir dir-ltr"
                                               aria-atomic="true"
                                               aria-live="polite"
                                               >62 out of 850 characters
