--- a/experienceType.html
+++ b/experienceType.html
@@ -735,7 +735,7 @@
       .dir-rtl.atm_gz_1y44olf.atm_gz_1y44olf {
         margin-right: 4px;
       }
-      .a8jt5op[class][class] {
+      .text__highlight[class][class] {
         -webkit-clip: rect(0 0 0 0);
         clip: rect(0 0 0 0);
         -webkit-clip-path: inset(100%);
@@ -747,7 +747,7 @@
         white-space: nowrap;
         width: 1px;
       }
-      .dir.a8jt5op[class][class] {
+      .dir.text__highlight[class][class] {
         border: 0;
         padding: 0;
       }
