--- a/inbox.html
+++ b/inbox.html
@@ -3866,7 +3866,7 @@
       .dir-rtl.atm_gz_1y44olf.atm_gz_1y44olf {
         margin-right: 4px;
       }
-      .a8jt5op[class][class] {
+      .text__highlight[class][class] {
         -webkit-clip: rect(0 0 0 0);
         clip: rect(0 0 0 0);
         -webkit-clip-path: inset(100%);
@@ -3878,7 +3878,7 @@
         white-space: nowrap;
         width: 1px;
       }
-      .dir.a8jt5op[class][class] {
+      .dir.text__highlight[class][class] {
         border: 0;
         padding: 0;
       }
@@ -7285,7 +7285,7 @@
                               <div class="flex-item">
                                 <div></div>
                               </div></div></span
-                          ><span class="a8jt5op dir dir-ltr"
+                          ><span class="text__highlight dir dir-ltr"
                             >Experience hosting dashboard</span
                           >
                         </button>
@@ -7876,7 +7876,7 @@
                                                   Booking completed
                                                 </div>
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Booking status is Booking
                                                   completed</span
                                                 >
@@ -7893,7 +7893,7 @@
                                                   Orange Battered Eggs
                                                 </div>
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Cooking Deep Fried Bright
                                                   Orange Battered Eggs</span
                                                 ></span
@@ -7911,7 +7911,7 @@
                                                   questions, plesae let me know.
                                                 </div>
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Message preview: You: Thanks
                                                   for attending! If you have any
                                                   follow up questions, plesae
@@ -7948,13 +7948,13 @@
                                                 <!-- -->Cooking Deep Fried
                                                 Bright Orange Battered Eggs
                                               </div>
-                                              <span class="a8jt5op dir dir-ltr"
+                                              <span class="text__highlight dir dir-ltr"
                                                 >Jun 25, 2022 · Cooking Deep
                                                 Fried Bright Orange Battered
                                                 Eggs</span
                                               >
                                             </div>
-                                            <span class="a8jt5op dir dir-ltr"
+                                            <span class="text__highlight dir dir-ltr"
                                               >Responded</span
                                             >
                                           </div></a
@@ -8025,7 +8025,7 @@
                                                   Booking completed
                                                 </div>
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Booking status is Booking
                                                   completed</span
                                                 >
@@ -8041,7 +8041,7 @@
                                                   Jesselle Papa
                                                 </div>
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Conversation with Jesselle
                                                   Papa</span
                                                 ></span
@@ -8058,7 +8058,7 @@
                                                   booking the experience.
                                                 </div>
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Message preview: You: Hello,
                                                   Thanks for booking the
                                                   experience.
@@ -8094,13 +8094,13 @@
                                                 <!-- -->Cooking Deep Fried
                                                 Bright Orange Battered Eggs
                                               </div>
-                                              <span class="a8jt5op dir dir-ltr"
+                                              <span class="text__highlight dir dir-ltr"
                                                 >Jun 25, 2022 · Cooking Deep
                                                 Fried Bright Orange Battered
                                                 Eggs</span
                                               >
                                             </div>
-                                            <span class="a8jt5op dir dir-ltr"
+                                            <span class="text__highlight dir dir-ltr"
                                               >Responded</span
                                             >
                                           </div></a
