--- a/merchandising.html
+++ b/merchandising.html
@@ -309,7 +309,7 @@
                                                 ><span
                                                   id="searchInputDescriptionId"
                                                   ><span
-                                                    class="a8jt5op dir dir-ltr"
+                                                    class="text__highlight dir dir-ltr"
                                                     >Currently showing Anytime,
                                                     Add guests. Change
                                                     search.</span
@@ -4272,7 +4272,7 @@
                                                   aria-labelledby="littleSearchLabel"
                                                 >
                                                   <span
-                                                    class="a8jt5op dir dir-ltr"
+                                                    class="text__highlight dir dir-ltr"
                                                     id="littleSearchLabel"
                                                     >Start your search</span
                                                   ><button
@@ -4281,7 +4281,7 @@
                                                     type="button"
                                                   >
                                                     <span
-                                                      class="a8jt5op dir dir-ltr"
+                                                      class="text__highlight dir dir-ltr"
                                                       >Location</span
                                                     >
                                                     <div
@@ -4298,7 +4298,7 @@
                                                     type="button"
                                                   >
                                                     <span
-                                                      class="a8jt5op dir dir-ltr"
+                                                      class="text__highlight dir dir-ltr"
                                                       >Check in / Check
                                                       out</span
                                                     >
@@ -4316,7 +4316,7 @@
                                                     type="button"
                                                   >
                                                     <span
-                                                      class="a8jt5op dir dir-ltr"
+                                                      class="text__highlight dir dir-ltr"
                                                       >Guests</span
                                                     >
                                                     <div
@@ -12878,7 +12878,7 @@
                                               </div>
                                               <div class="footer__copyright">
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Footer section</span
                                                 >
                                                 <section>
@@ -12891,7 +12891,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="text__highlight dir dir-ltr"
                                                               >Choose a
                                                               language</span
                                                             ><span
@@ -12924,7 +12924,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="text__highlight dir dir-ltr"
                                                               >Choose a
                                                               currency</span
                                                             ><span
@@ -12993,7 +12993,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="text__highlight dir dir-ltr"
                                                               >Choose a
                                                               language</span
                                                             ><span
@@ -13026,7 +13026,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="text__highlight dir dir-ltr"
                                                               >Choose a
                                                               currency</span
                                                             ><span
@@ -13218,7 +13218,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="text__highlight dir dir-ltr"
                                                               >Choose a
                                                               language</span
                                                             ><span
@@ -13251,7 +13251,7 @@
                                                             class="_f2hxk3s"
                                                           >
                                                             <span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="text__highlight dir dir-ltr"
                                                               >Choose a
                                                               currency</span
                                                             ><span
