--- a/resources.html
+++ b/resources.html
@@ -71,7 +71,7 @@
                                 class="_1mt76m69"
                                 ><span class="_1yy2pf1"
                                   >Resource Center<span
-                                    class="a8jt5op dir dir-ltr"
+                                    class="text__highlight dir dir-ltr"
                                     >home page</span
                                   ></span
                                 ></a
@@ -5368,14 +5368,14 @@
                       </section>
                     </div>
                     <div class="footer__copyright">
-                      <span class="a8jt5op dir dir-ltr">Footer section</span>
+                      <span class="text__highlight dir dir-ltr">Footer section</span>
                       <section>
                         <div class="_1udzt2s">
                           <div class="_p03egf">
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="a8jt5op dir dir-ltr"
+                                  <span class="text__highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -5398,7 +5398,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="a8jt5op dir dir-ltr"
+                                  <span class="text__highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
@@ -5438,7 +5438,7 @@
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="a8jt5op dir dir-ltr"
+                                  <span class="text__highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -5461,7 +5461,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="a8jt5op dir dir-ltr"
+                                  <span class="text__highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
@@ -5608,7 +5608,7 @@
                             <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="a8jt5op dir dir-ltr"
+                                  <span class="text__highlight dir dir-ltr"
                                     >Choose a language</span
                                   ><span class="_14tkmhr"
                                     ><svg
@@ -5631,7 +5631,7 @@
                                 </button></span
                               ><span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
-                                  <span class="a8jt5op dir dir-ltr"
+                                  <span class="text__highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="_14tkmhr"
                                     ><span class="_pgfqnw">₱</span></span
