--- a/account-settings.html
+++ b/account-settings.html
@@ -857,7 +857,7 @@
                                             type="button"
                                             class="_f2hxk3s"
                                           >
-                                            <span class="a8jt5op dir dir-ltr"
+                                            <span class="text__highlight dir dir-ltr"
                                               >Choose a language</span
                                             ><span class="_14tkmhr"
                                               ><svg
@@ -885,7 +885,7 @@
                                             type="button"
                                             class="_f2hxk3s"
                                           >
-                                            <span class="a8jt5op dir dir-ltr"
+                                            <span class="text__highlight dir dir-ltr"
                                               >Choose a currency</span
                                             ><span class="_14tkmhr"
                                               ><span class="_pgfqnw"
@@ -1658,7 +1658,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="a8jt5op dir dir-ltr"
+                          <span class="text__highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -1667,7 +1667,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1692,7 +1692,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1733,7 +1733,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1758,7 +1758,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1914,7 +1914,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1939,7 +1939,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
