--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -1020,7 +1020,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="a8jt5op dir dir-ltr"
+                          <span class="text__highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -1029,7 +1029,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1054,7 +1054,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1095,7 +1095,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1120,7 +1120,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1276,7 +1276,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1301,7 +1301,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
