--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -413,7 +413,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                                       <!-- -->/
                                       <!-- -->500</span
                                     ><span
-                                      class="a8jt5op dir dir-ltr"
+                                      class="text__highlight dir dir-ltr"
                                       aria-atomic="true"
                                       aria-live="polite"
                                       >84 out of 500 characters used</span
@@ -449,7 +449,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                             </div>
                           </div>
                           <span
-                            class="a8jt5op dir dir-ltr"
+                            class="text__highlight dir dir-ltr"
                             aria-live="assertive"
                           ></span>
                         </div>
@@ -460,7 +460,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="a8jt5op dir dir-ltr"
+                      <span class="text__highlight dir dir-ltr"
                         >Your progress: step 8 out of 10.</span
                       >
                       <div class="_9kv7q8">
