--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -479,7 +479,7 @@
                 <div class="_1px78l2">
                   <div class="_11go4zx">
                     <div class="flex-items-center">
-                      <span class="a8jt5op dir dir-ltr"
+                      <span class="text__highlight dir dir-ltr"
                         >Your progress: step 1 out of 10.</span
                       >
                       <div class="_9kv7q8">
