--- a/edit/title.html
+++ b/edit/title.html
@@ -441,7 +441,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                                           <div class="_1wmtabt">
                                             <span aria-hidden="true">46/60</span
                                             ><span
-                                              class="a8jt5op dir dir-ltr"
+                                              class="text__highlight dir dir-ltr"
                                               aria-atomic="true"
                                               aria-live="polite"
                                               >46 out of 60 characters
