--- a/payment.html
+++ b/payment.html
@@ -443,7 +443,7 @@
                                               <fieldset class="_1rshn0">
                                                 <legend class="_1gyjybc">
                                                   <span
-                                                    class="a8jt5op dir dir-ltr"
+                                                    class="text__highlight dir dir-ltr"
                                                     >Payment plan</span
                                                   >
                                                 </legend>
@@ -657,7 +657,7 @@
                                                             </div>
                                                           </div>
                                                           <span
-                                                            class="a8jt5op dir dir-ltr"
+                                                            class="text__highlight dir dir-ltr"
                                                             id="payment_option_selector_described_by"
                                                             >Select or add a new
                                                             payment method</span
@@ -1086,7 +1086,7 @@
                                                           <span
                                                             class="_154iz1b2"
                                                             ><span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="text__highlight dir dir-ltr"
                                                               >Rating 5.0 out of
                                                               5; 70
                                                               reviews</span
@@ -1125,7 +1125,7 @@
                                                           <span
                                                             class="_154iz1b2"
                                                             ><span
-                                                              class="a8jt5op dir dir-ltr"
+                                                              class="text__highlight dir dir-ltr"
                                                               >Rating 5.0 out of
                                                               5; 70
                                                               reviews</span
@@ -1376,7 +1376,7 @@
                               <footer role="contentinfo" class="footer">
                                 <div class="footer__container">
                                   <div class="_157uib4">
-                                    <span class="a8jt5op dir dir-ltr"
+                                    <span class="text__highlight dir dir-ltr"
                                       >Footer section</span
                                     >
                                     <section>
@@ -1389,7 +1389,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span class="_14tkmhr"
                                                   ><svg
@@ -1418,7 +1418,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="_14tkmhr"
                                                   ><span class="_pgfqnw"
@@ -1481,7 +1481,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span class="_14tkmhr"
                                                   ><svg
@@ -1510,7 +1510,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="_14tkmhr"
                                                   ><span class="_pgfqnw"
@@ -1697,7 +1697,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Choose a language</span
                                                 ><span class="_14tkmhr"
                                                   ><svg
@@ -1726,7 +1726,7 @@
                                                 class="_f2hxk3s"
                                               >
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="text__highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="_14tkmhr"
                                                   ><span class="_pgfqnw"
