--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -1632,7 +1632,7 @@
                           </section>
                         </div>
                         <div class="footer__copyright">
-                          <span class="a8jt5op dir dir-ltr"
+                          <span class="text__highlight dir dir-ltr"
                             >Footer section</span
                           >
                           <section>
@@ -1641,7 +1641,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1666,7 +1666,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1707,7 +1707,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1732,7 +1732,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
@@ -1888,7 +1888,7 @@
                                 <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a language</span
                                       ><span class="_14tkmhr"
                                         ><svg
@@ -1913,7 +1913,7 @@
                                     </button></span
                                   ><span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
-                                      <span class="a8jt5op dir dir-ltr"
+                                      <span class="text__highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="_14tkmhr"
                                         ><span class="_pgfqnw">₱</span></span
