--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -302,7 +302,7 @@
                                   </div>
                                 </div>
                                 <span
-                                  class="a8jt5op dir dir-ltr"
+                                  class="text__highlight dir dir-ltr"
                                   id="payment_option_selector_described_by"
                                   >Select or add a new payment method</span
                                 >
