--- a/products.html
+++ b/products.html
@@ -2820,7 +2820,7 @@
                                                             width: 100%;
                                                           "
                                                           ><span
-                                                            class="animation__fill__mode--forwards animation__iteration__count--infinite animation__direction--alternate animation__duration--1s atm_1c_lvmtox animation__timing__function--ease--in--out animation__bg__color--current block relative animation__all--none animation__opacity dir dir-ltr"
+                                                            class="animation__fill-mode-forwards animation__iteration-count-infinite animation__direction-alternate animation__duration-1s atm_1c_lvmtox animation__timing-function-ease-in-out animation__bg-color-current block relative animation__all-none animation__opacity dir dir-ltr"
                                                             style="
                                                               height: 100%;
                                                               width: 100%;
